# ess

./: .dockerignore  .gitignore  .gitlab-ci.example.yml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/conventional-commits/: SKILL.md
.agents/skills/plan-implementation/: SKILL.md
.agents/skills/review-plan-implementation/: SKILL.md
.agents/skills/review-plan-phase/: SKILL.md
config/: .env.example
docs/: INDEX.md  README.md
docs/context/: ARCHITECTURE.md  CONFIGURATION.md  WORKFLOWS.md
docs/designs/: dashboard-architecture.md  otlp-metrics-telemetry-evaluation.md  technology-decisions.md
docs/guides/: DATADOG_AGENT_TOOLS.md  DATADOG_ONLY_UNATTENDED_AND_INSPECTABLE_SHIP.md  DATADOG_SENTRY_ORCHESTRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  SENTRY_REST_INTEGRATION.md  TEAMS_CHANNEL_INTEGRATION.md  TRIGGER_END_TO_END_DATADOG_PUP_INTEGRATION.md
src/: config.py  harness_cli.py  llm_client.py  main.py  metrics.py  models.py  scheduler.py
src/agent/: __init__.py  datadog_tools.py  health_check_agent.py  sentry_tools.py  trace.py
src/notifications/: __init__.py  teams.py
src/tools/: __init__.py  normalise.py  pup_tool.py  sentry_tool.py
tests/: __init__.py  conftest.py  test_agent_trace.py  test_config.py  test_datadog_tools.py  test_e2e_phase5.py  test_harness_cli.py  test_health_check_agent.py  test_llm_client.py  test_main.py  test_metrics.py  test_models.py  test_notifications.py  test_pup_tool.py  test_scheduler.py  test_sentry_tool.py  test_sentry_tools.py  test_trigger.py
(+29 files in other folders)
