[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ess"
version = "0.1.0"
description = "Eye of Sauron Service — agentic post-deploy monitoring"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "apscheduler>=3.11",
    "aiohttp>=3.11",
    "boto3>=1.38",
    "structlog>=25.1",
    "typer==0.24.1",
]

[project.scripts]
ess = "src.main:run"
ess-harness = "src.harness_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.11",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = ["integration: marks tests requiring real external services (deselected by default)"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in function defaults

[tool.ruff.lint.isort]
known-first-party = ["src"]
